--- a/Invoice/build.gradle
+++ b/Invoice/build.gradle
@@ -17,4 +17,7 @@ dependencies {
 
     //JSch
     compile("com.jcraft:jsch:0.1.54")
+
+    //Jcalendar
+    compile fileTree(dir: 'libs', include: ['*.jar'])
 }
