--- a/BBW-Pulsa/build.gradle
+++ b/BBW-Pulsa/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'idea'
-apply plugin: 'spring-boot'
+apply plugin: 'org.springframework.boot'
 
 sourceCompatibility = 1.8
 
 def jarBaseName = 'bbw-pulsa-api'
 def distributionFolder = 'bbw-pulsa-api'
-def configFiles = ['application.properties'] as Set
+def configFiles = ['application.properties', 'logback.xml', 'bbw-pulsa-api.sh'] as Set
 
 jar {
     baseName = jarBaseName
