--- a/MiddlewareRequestHandler/build.gradle
+++ b/MiddlewareRequestHandler/build.gradle
@@ -35,7 +35,8 @@ repositories {
 
 dependencies {
     //Spring Boot
-    //compile("org.springframework.boot:spring-boot-starter-logging")
+    compile("org.springframework.boot:spring-boot-starter-jdbc")
+    compile("org.springframework.boot:spring-boot-starter-logging")
     compile("org.springframework.boot:spring-boot-starter-web")
 
     //JSON
