--- a/Invoice/build.gradle
+++ b/Invoice/build.gradle
@@ -1,6 +1,3 @@
-group 'invoice'
-//version '1.0'
-
 apply plugin: 'java'
 
 sourceCompatibility = 1.8
@@ -11,18 +8,22 @@ repositories {
     maven { url "http://repo.spring.io/libs-milestone" }
 }
 
-/*jar {
-    manifest {
-        attributes(
-                'Class-Path': configurations.compile.collect { it.getName() }.join(' '), 'Main-Class': 'com.main.java.invoice.project.form.Main'
-        )
-    }
-}*/
+def jarBaseName= 'invoice'
+def distributionFolder = 'invoice'
+def configFiles = ['invoice.sh', 'README'] as Set
 
 jar {
-    manifest {
-        attributes 'Main-Class' : 'com.main.java.invoice.project.form.Main'
+    doFirst {
+        manifest {
+            if (!configurations.compile.isEmpty()) {
+                attributes(
+                        'Class-Path': configurations.compile.collect{it.toURI().toString()}.join(' '),
+                        'Main-Class': 'com.main.java.invoice.project.Main')
+            }
+        }
     }
+    baseName = jarBaseName
+    exclude configFiles
 }
 
 dependencies {
@@ -38,3 +39,26 @@ dependencies {
     //JasperReport
     compile group: 'net.sf.jasperreports', name: 'jasperreports', version: '4.5.0'
 }
+
+task copyFilesToPackage << {
+    copy {
+        //from('src/main/resources')
+        from 'build/libs/' + jarBaseName + '.jar'
+        into 'build/' + distributionFolder + '/lib'
+    }
+
+    copy {
+        from('src/main/resources') {
+            include configFiles
+        }
+        into 'build/' + distributionFolder
+    }
+}
+
+task zipPackage(type: Zip, dependsOn: 'copyFilesToPackage') {
+    from 'build/' + distributionFolder
+    baseName distributionFolder
+}
+
+build.dependsOn zipPackage
+zipPackage.mustRunAfter check
