--- a/BBW-Pulsa/src/main/resources/application.properties
+++ b/BBW-Pulsa/src/main/resources/application.properties
@@ -4,5 +4,5 @@ server.port=3331
 #database
 jdbc.driver-class-name=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/BBW_PULSA
-jdbc.username=lingga
-jdbc.password=password
+jdbc.username=dev
+jdbc.password=Password
