--- a/BackOLShop/src/main/resources/application.properties
+++ b/BackOLShop/src/main/resources/application.properties
@@ -3,6 +3,6 @@ server.port=3331
 
 #database
 jdbc.driver-class-name=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/BOS
+jdbc.url=jdbc:mysql://localhost:3306/BOS?autoReconnect=true&useSSL=false
 jdbc.username=dev
 jdbc.password=Password
