--- a/BackOLShop/build.gradle
+++ b/BackOLShop/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'idea'
-apply plugin: 'spring-boot'
+apply plugin: 'org.springframework.boot'
 
 sourceCompatibility = 1.8
 
@@ -34,10 +34,16 @@ repositories {
     maven { url "http://repo.spring.io/libs-milestone" }
 }
 
+/*configurations.all {
+    exclude group: "org.springframework.boot", module: "spring-boot-starter-logging"
+    exclude group: "org.springframework.boot", module: "logback-classic"
+}*/
+
 dependencies {
     //Spring Boot
     compile("org.springframework.boot:spring-boot-starter-jdbc")
     compile("org.springframework.boot:spring-boot-starter-logging")
+    //compile("org.springframework.boot:spring-boot-starter-log4j2")
     compile("org.springframework.boot:spring-boot-starter-web")
 
     //JSON
