--- a/BackOLShop/build.gradle
+++ b/BackOLShop/build.gradle
@@ -52,6 +52,11 @@ dependencies {
     //MySQL Connector
     compile("mysql:mysql-connector-java")
 
+    //test
+    testCompile("org.springframework.boot:spring-boot-starter-test")
+    testCompile("org.mockito:mockito-all:1.9.5")
+    testCompile("org.testng:testng:6.10")
+    testCompile("org.assertj:assertj-core:3.6.2")
 }
 
 task copyFilesToPackage << {
