add handler exception for rest service

--- a/BackOLShop/build.gradle
+++ b/BackOLShop/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-jdbc")
     compile("org.springframework.boot:spring-boot-starter-logging")
     compile("org.springframework.boot:spring-boot-starter-web")
+    compile("org.springframework.boot:spring-boot-starter-data-jpa")
 
     //JSON
     compile("com.google.code.gson:gson")
