add scheduler for BOS

--- a/BackOLShop/src/main/resources/application.properties
+++ b/BackOLShop/src/main/resources/application.properties
@@ -6,3 +6,17 @@ jdbc.driver-class-name=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/BOS?autoReconnect=true&useSSL=false
 jdbc.username=dev
 jdbc.password=Password
+
+#Scheduler time
+scheduler.time.ms=13000
+
+#Properties Message of APWHA
+encode.format=UTF-8
+api.key=AHGNMVIPDI0SAVHUTLV6
+api.type=IN
+mark.as.pulled=1
+get.not.pulled.only=1
+
+#URL
+url.get.message=http://panel.apiwha.com/get_messages.php?apikey=
+url.send.message=http://panel.apiwha.com/send_message.php?apikey=
