fixing counting total shipping

--- a/BackOLShop/src/main/resources/application.properties
+++ b/BackOLShop/src/main/resources/application.properties
@@ -8,7 +8,8 @@ jdbc.username=dev
 jdbc.password=Password
 
 #Scheduler time
-scheduler.time.ms=13000
+scheduler.time.ms.get.message=5000
+scheduler.time.ms.check.credit=3600000
 
 #Properties Message of APWHA
 encode.format=UTF-8
@@ -20,3 +21,4 @@ get.not.pulled.only=1
 #URL
 url.get.message=http://panel.apiwha.com/get_messages.php?apikey=
 url.send.message=http://panel.apiwha.com/send_message.php?apikey=
+url.check.credit=http://panel.apiwha.com/get_credit.php?apikey=
