adding new service for SiCepat

--- a/BOS/src/main/resources/application.properties
+++ b/BOS/src/main/resources/application.properties
@@ -12,6 +12,9 @@ scheduler.time.ms.get.message=5000
 scheduler.time.ms.check.credit=3600000
 scheduler.time.ms.update.origin.destination=25000
 
+#Origin City User
+origin.city=Jakarta
+
 #URL Encode
 encode.format=UTF-8
 
