add sync data for origin, destination & tarif

--- a/BOS/src/main/resources/application.properties
+++ b/BOS/src/main/resources/application.properties
@@ -10,7 +10,8 @@ jdbc.password=Password
 #Scheduler time
 scheduler.time.ms.get.message=5000
 scheduler.time.ms.check.credit=3600000
-scheduler.time.ms.update.origin.destination=25000
+scheduler.time.ms.update.origin.destination=14400000
+scheduler.time.update.origin.destination=0 0 1 * * ?
 
 #Origin City User
 origin.city=Jakarta
@@ -19,7 +20,7 @@ origin.city=Jakarta
 encode.format=UTF-8
 
 #Properties of APIWHA
-apiwha.api.key=AHGNMVIPDI0SAVHUTLV6
+apiwha.api.key=NHEINH6N8XNVRH9KSIPK
 apiwha.api.type=IN
 apiwha.mark.as.pulled=1
 apiwha.get.not.pulled.only=1
