make scheduler more simple

--- a/BOS/src/main/resources/application.properties
+++ b/BOS/src/main/resources/application.properties
@@ -7,10 +7,9 @@ jdbc.url=jdbc:mysql://localhost:3306/BOS?autoReconnect=true&useSSL=false
 jdbc.username=dev
 jdbc.password=Password
 
-#Scheduler time
+#Scheduler timescheduler.time.ms.update.origin.destination
 scheduler.time.ms.get.message=5000
 scheduler.time.ms.check.credit=3600000
-scheduler.time.ms.update.origin.destination=14400000
 scheduler.time.update.origin.destination=0 0 1 * * ?
 
 #Origin City User
