--- a/JavaSample/build.gradle
+++ b/JavaSample/build.gradle
@@ -35,7 +35,7 @@ dependencies {
 
     //Apache Commons
     //compile("commons-lang:commons-lang:2.6")
-    compile("org.apache.commons:commons-lang3:3.5")
+    compile("org.apache.commons:commons-lang3:3.8")
 
     //Mockito
     compile("org.mockito:mockito-all:1.10.19")
@@ -47,7 +47,18 @@ dependencies {
     compile("org.apache.httpcomponents:httpclient:4.5.4")
 
     //Encryption
-    compile(group: 'org.jasypt', name: 'jasypt', version: '1.6')
+    compile("org.jasypt:jasypt:1.6")
+
+    //JUG
+    compile("com.fasterxml.uuid:java-uuid-generator:3.1.5")
+
+    //BouncyCastle
+//    compile files("libs/bcprov-jdk15on-160.jar")
+    compile("org.bouncycastle:bcprov-jdk15on:1.60")
+//    compile("org.bouncycastle:bcprov-jdk16:1.45")
+
+    //Cassandra Java Driver
+    //compile("com.datastax.cassandra:cassandra-driver-core:1.0.2")
 
     //Jackson
     compile("com.fasterxml.jackson.core:jackson-core:2.8.9")
