--- a/JavaSample/build.gradle
+++ b/JavaSample/build.gradle
@@ -77,6 +77,9 @@ dependencies {
     //JSch
     compile("com.jcraft:jsch:0.1.54")
 
+    //DOM
+    compile("org.w3c:dom:2.3.0-jaxb-1.0.6")
+    
     //TestNG
     testCompile("org.testng:testng:6.10")
 }
