--- a/SampleToken/main-sample-token/build.gradle
+++ b/SampleToken/main-sample-token/build.gradle
@@ -43,6 +43,12 @@ dependencies {
 
     compile("org.springframework.boot:spring-boot-starter-log4j2")
 
+    //JWT
+    compile("org.bitbucket.b_c:jose4j:0.6.5")
+
+    //Gson
+    compile("com.google.code.gson:gson:2.8.5")
+
     //Web Server
     compile("org.apache.tomcat.embed:tomcat-embed-jasper")
 
