--- a/SpringBootAdminTest/src/main/resources/application.properties
+++ b/SpringBootAdminTest/src/main/resources/application.properties
@@ -1,26 +1,20 @@
 server.address=localhost
-#server.port=8081
 
 spring.application.name=admin-server
 
-#### Security Source ###
+####Spring Boot Admin###
+jasypt.encryptor.bean=encryptorBean
+
 security.user.name=admin
-#security.user.password=admin123
-security.user.password=ENC(uTSqb9grs1+vUv3iN8lItC0kl65lMG+8)
-
-security.basic.enabled=false
-
-management.endpoints.web.exposure.include=*
-management.security.enabled=false
+security.user.password=ENC(VbhvVpOxwhzgAmYUTYp7EcmOoWrUoP9/)
 
 ### Config Source ###
 spring.boot.admin.monitor.read-timeout=6000
 spring.boot.admin.monitor.connect-timeout=6000
 
 ### Logger Source ###
-#logging.level.org.springframework.web=DEBUG
-logging.level.org.springframework.security=DEBUG
-#logging.level.org.springframework.security=DEBUG,ERROR
-#logging.level.de.codecentric.boot.admin=DEBUG,ERROR
-#logging.level.com.hcid=DEBUG,ERROR
-#logging.level.root=DEBUG
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.security=DEBUG,ERROR
+logging.level.de.codecentric.boot.admin=DEBUG,ERROR
+logging.level.com.hcid=DEBUG,ERROR
+logging.level.root=DEBUG
