--- a/SpringBootActuatorTest/src/main/resources/application.properties
+++ b/SpringBootActuatorTest/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.address=localhost
-server.port=0
+server.port=8081
 
 spring.application.name=resource-server
 
@@ -7,20 +7,56 @@ spring.application.name=resource-server
 info.app.property=What a nice property !!!
 info.app.desc=Simple application to test spring boot actuator
 
-#### Security Source ###
+####Spring Boot Admin###
+jasypt.encryptor.bean=encryptorBean
 spring.boot.admin.url=http://localhost:8080
+
 spring.boot.admin.username=admin
-#spring.boot.admin.password=admin123
-spring.boot.admin.password=Password@1
+spring.boot.admin.password=ENC(RcZ+CXe5xFgr8TvViIUqfWMTWtiv/qfc)
 
 security.basic.enabled=false
 
+#Metrics related configurations
+management.endpoint.metrics.enabled=true
+management.endpoints.web.exposure.include=*
+management.endpoint.prometheus.enabled=true
+management.metrics.export.prometheus.enabled=true
+
 management.security.enabled=false
 
+###Actuator Source###
+endpoints.actuator.enabled=true
+endpoints.actuator.sensitive=true
+endpoints.health.enabled=true
+endpoints.health.sensitive=true
+endpoints.info.enabled=true
+endpoints.info.sensitive=true
+endpoints.metrics.enabled=true
+endpoints.metrics.sensitive=true
+endpoints.auditevents.enabled=true
+endpoints.auditevents.sensitive=true
+endpoints.mappings.enabled=true
+endpoints.mappings.sensitive=true
+endpoints.logfile.enabled=true
+endpoints.logfile.sensitive=true
+
+# Database configurations.
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:file:./db/target/person_db;DB_CLOSE_DELAY=-1
+spring.datasource.username=satish
+spring.datasource.data=classpath:/db-scripts/init-script.sql
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/db-console
+
+spring.jpa.show-sql=true
+
+# change the below to none in production
+spring.jpa.hibernate.ddl-auto=create-drop
+
 ### Logger Source ###
-#logging.level.org.springframework.web=DEBUG
-logging.level.org.springframework.security=DEBUG
-#logging.level.org.springframework.security=DEBUG,ERROR
-#logging.level.de.codecentric.boot.admin=DEBUG,ERROR
-#logging.level.com.hcid=DEBUG,ERROR
-#logging.level.root=DEBUG
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.security=DEBUG,ERROR
+logging.level.com.hcid=DEBUG,ERROR
+logging.level.root=DEBUG
+logging.file=/app/logs/springboot-actuator-test/springboot-actuator-test.log
