--- a/SpringBootTimeout/src/main/resources/application.properties
+++ b/SpringBootTimeout/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+#logging.level.org.springframework=DEBUG
+#logging.level.com.howtodoinjava=DEBUG
+
 spring.mvc.async.request-timeout=5000
+#spring.mvc.async.request-timeout=3s
