--- a/SpringBootJdbc/src/main/resources/application.properties
+++ b/SpringBootJdbc/src/main/resources/application.properties
@@ -5,5 +5,5 @@ spring.datasource.password=APP_MOBILE_ORIGINATION
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
 # HikariCP settings
-spring.datasource.hikari.connection-timeout=10000
+spring.datasource.hikari.connection-timeout=3000
 spring.datasource.hikari.maximum-pool-size=5
