update proyek SpringBootJdbcTransactional

--- a/SpringBootJDBCTransactional/src/main/resources/application.properties
+++ b/SpringBootJDBCTransactional/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.datasource.password=L1ngg@aska3d0
 # HikariCP settings
 spring.datasource.hikari.connection-timeout=3000
 spring.datasource.hikari.maximum-pool-size=5
+
+# OMDB
+api.url=www.omdbapi.com/
+api.key=d56bdf3e
