--- a/SpringBootJDBCTransactional/pom.xml
+++ b/SpringBootJDBCTransactional/pom.xml
@@ -47,9 +47,27 @@
         </dependency>
 
         <dependency>
+            <groupId>com.opengamma</groupId>
+            <artifactId>elsql</artifactId>
+            <version>1.3</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.threeten</groupId>
             <artifactId>threetenbp</artifactId>
             <version>1.3.6</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.10</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.6</version>
         </dependency>
 
         <dependency>
