--- a/SpringBootJDBCTransactional/src/main/resources/application.properties
+++ b/SpringBootJDBCTransactional/src/main/resources/application.properties
@@ -1,8 +1,11 @@
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# Logging
+logging.pattern.console=%date{HH:mm:ss.SSS} [%20t] %m %n
 
+# Datasource
 spring.datasource.url=jdbc:mysql://localhost:3306/EXERCISE?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=L1ngg@aska3d0
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # HikariCP settings
 spring.datasource.hikari.connection-timeout=3000
@@ -14,5 +17,11 @@ api.key=d56bdf3e
 
 # TTL Caches
 expire.time.accounts=13
-expire.time.accounts-db=5
-expire.time.movie-info=5
+expire.time.accounts-db=60
+expire.time.movie-info=60
+
+# Cache
+spring.cache.type=redis
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.database=3
