--- a/DemoSql2oHexagonal/src/main/resources/queue.properties
+++ b/DemoSql2oHexagonal/src/main/resources/queue.properties
@@ -5,3 +5,4 @@ spring.rabbitmq.password=ENC(N79XHAC/r3d+xGU55K3Ur20YDs1eU2n/)
 admin.queue=adminQueue
 marketing.queue=marketingQueue
 car.queue=carQueue
+test.queue=testQueue
