--- a/DemoSql2oHexagonal/src/main/resources/database.properties
+++ b/DemoSql2oHexagonal/src/main/resources/database.properties
@@ -1,6 +1,6 @@
 db.url=jdbc:mysql://localhost:3306/DEMO-SQL2O?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=Asia/Jakarta
-db.username=root
-db.password=ENC(OtVFmj+P33Lzki+eiXIpUzb2Cu7lmyPP)
+db.username=lingga.putra
+db.password=ENC(WUcpXmTw5V2KcaJ2IsT050oxWgZ2kYDU)
 db.driverClassName=com.mysql.cj.jdbc.Driver
 db.minIdle=5
 db.maxIdle=10
